--- a/Versão Nova/css/style.css
+++ b/Versão Nova/css/style.css
@@ -13,7 +13,10 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: rgb(95, 168, 218);
+    background-image: url("../img/bg.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .col-md-4{
@@ -21,10 +24,13 @@ body{
     padding-top: 20px;
     padding-bottom: 20px;
     border-radius: 10px;
+    box-shadow: 1px 1px 8px black;
 }
 
 h1{
     font-size: 48px;
+    color: white;
+    text-shadow: 1px 1px 8px black;
 }
 
 h2{
@@ -32,7 +38,38 @@ h2{
     text-align: center;
 }
 
+h3{
+    font-size: 24px;
+    text-align: left;
+}
+
+h4{
+    font-size: 24px;
+    text-align: center;
+}
+
+h5{
+    font-size: 18px;
+    text-align: left;
+}
+
 a{
     color: rgb(102, 101, 155);
     font-size: 18px;
+}
+
+.tab{
+    text-align: center;
+    width: 100%;
+}
+
+button{
+    color: white;
+    background-color: rgb(153, 155, 255);
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover{
+    background-color: rgb(0, 123, 255);
 }
